--- a/style.css
+++ b/style.css
@@ -33,3 +33,18 @@
     margin: 0px 4px;
     border: 1px solid green;
 }
+
+.correct-answer {
+    border: 2px solid blue;
+    width: 98%;
+    height: 98%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.correct-answer h3, .correct-answer h5 {
+    padding: 3px;
+    margin: 0;
+}
