--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
     min-width: 340px;
     border: 1px solid red;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
@@ -32,6 +33,10 @@
     min-height: 60px;
     margin: 0px 4px;
     border: 1px solid green;
+}
+
+.buttons-box {
+    margin: 20px 0;
 }
 
 .correct-answer {
