--- a/style.css
+++ b/style.css
@@ -39,6 +39,13 @@
     margin: 20px 0 0 0;
 }
 
+.one-away {
+    margin: 10px 0;
+    text-align: center;
+    width: 100px;
+    height: 20px;
+}
+
 .buttons-box {
     margin: 20px 0;
 }
