--- a/style.css
+++ b/style.css
@@ -1,8 +1,50 @@
+:root {
+    --light-grey: #eeeeee;
+    --dark-grey: #696969;
+}
+
+body {
+    background-color: #bdaeff;
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+}
+
+h1 {
+    font-size: 1.4em;
+}
+
+h2 {
+    font-size: 1.2em;
+}
+
+h3 {
+    font-size: 1em;
+}
+
+h4 {
+    font-size: 0.9em;
+}
+
+h5 {
+    font-size: 0.8em;
+}
+
 .game-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.play-container {
     width: 100%;
-    min-height: 700px;
-    min-width: 340px;
-    border: 1px solid red;
+    height: auto;
+    width: 70%;
+    min-width: 300px;
+    margin-top: 15vh;
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.286);
+    border-radius: 5px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,7 +53,7 @@
 
 .game-box {
     width: 70%;
-    min-width: 300px;
+    min-width: 250px;
     height: 280px;
     display: flex;
     flex-direction: column;
@@ -29,38 +71,96 @@
 
 .box {
     width: 24%;
-    min-width: 60px;
+    min-width: 50px;
     min-height: 60px;
     margin: 0px 4px;
-    border: 1px solid green;
+    color: black;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.094);
+    border: 1px solid var(--light-grey);
+    background-color: var(--light-grey);
+    border-radius: 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-transform: uppercase;
+    font-size: 0.9em;
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    letter-spacing: 1px;
 }
 
 .remaining-guesses {
-    margin: 20px 0 0 0;
+    margin: 0 0 15px 0;
 }
 
 .one-away {
-    margin: 30px 0;
     text-align: center;
     width: 200px;
     height: 20px;
+    margin: 10px 0;
+}
+
+.instructions {
+    margin: 40px 0;
 }
 
 .buttons-box {
-    margin: 20px 0;
+    margin: 0 0 50px 0;
 }
 
 .correct-answer {
-    border: 2px solid blue;
     width: 99%;
+    border-radius: 3px;
     min-height: 60px;
+    text-transform: uppercase;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.145);
+}
+
+#shuffle, #clear, #submit {
+    font-family: "Roboto", sans-serif;
+    margin: 0 2px;
+}
+
+.ca0 {
+    background-color: rgb(255, 217, 0);
+}
+
+.ca1 {
+    background-color: rgb(179, 112, 255);
+}
+
+.ca2 {
+    background-color: rgb(0, 136, 255);
+}
+
+.ca3 {
+    background-color: rgb(127, 199, 94);
 }
 
 .correct-answer h3, .correct-answer h5 {
     padding: 3px;
     margin: 0;
 }
+
+@media only screen and (max-width: 620px) {
+    .box {
+     font-size: 0.6em;;
+    }
+
+    h3 {
+        font-size: 0.8em;
+    }
+
+    h5 {
+        font-size: 0.7em;
+    }
+
+    .remaining-guesses {
+        width: 220px;
+        text-align: center;
+    }
+  }
